samples/_failures_safe/1761215277_b203e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6eb315c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_a6eb315c.c:189:17: error: expected ‘)’ at end of input
  189 |         if (dist
      |            ~    ^
      |                 )
./samples/SAFE/__tmp_a6eb315c.c:189:9: error: expected declaration or statement at end of input
  189 |         if (dist
      |         ^~
./samples/SAFE/__tmp_a6eb315c.c:189:9: error: expected declaration or statement at end of input
